# learnerd

./: .release-plz.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: dependabot.yml  labels.yaml
.github/workflows/: check.yaml  labels.yaml  release.yaml
crates/learner/: CHANGELOG.md  Cargo.toml
crates/learner/migrations/: init.sql
crates/learner/src/: database.rs  errors.rs  format.rs  lib.rs  paper.rs  tests.rs
crates/learner/src/clients/: arxiv.rs  doi.rs  iacr.rs  mod.rs
crates/learnerd/: CHANGELOG.md  Cargo.toml
crates/learnerd/src/: daemon.rs  errors.rs  main.rs
crates/learnerd/src/daemon/: linux.rs  macos.rs  mod.rs
crates/learnerd/tests/: cli.rs
src/: lib.rs
src/clients/: arxiv.rs  doi.rs  iacr.rs  mod.rs
