[workspace]
members  = ["crates/learner", "crates/learnerd"]
resolver = "2"

[workspace.package]
authors    = ["Colin Roberts"]
edition    = "2021"
keywords   = ["learning", "research", "automation", "papers"]
license    = "Apache-2.0"
readme     = "README.md"
repository = "https://github.com/autoparallel/learner"

[workspace.dependencies]
# local
learner = { path = "crates/learner", version = "*" }

# shared
dirs      = "5.0"
serde     = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio     = { version = "1.41", features = ["full"] }
tracing   = "0.1"

# learner only
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.11"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "functions", "chrono"] }
serde_json = "1.0"
tokio-rusqlite = "0.6"
url = "2.5"

# learnerd only
clap               = { version = "4.0", features = ["derive"] }
console            = "0.15"
daemonize          = "0.5"
dialoguer          = "0.11"
glob               = "0.3"
nix                = { version = "0.29.0", features = ["signal"] }
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# dev only
anyhow       = "1.0"
assert_cmd   = "2.0"
predicates   = "3.1"
serial_test  = "3.1"
tempfile     = "3.13"
tokio-test   = "0.4"
tracing-test = "0.2"
