[package]
name                 = "learner"
version              = "0.1.2"
edition.workspace    = true
description          = "A simple library for learning stuff"
authors.workspace    = true
repository.workspace = true
license.workspace    = true
documentation        = "https://docs.rs/learner"
readme               = "README.md"
keywords.workspace   = true

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
url         = { workspace = true }
regex       = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
quick-xml   = { workspace = true }
lazy_static = { workspace = true }
sqlx        = { workspace = true }

[dev-dependencies]
tokio-test   = { workspace = true }
tracing-test = { workspace = true }
anyhow       = { workspace = true }
