[package]
authors.workspace    = true
description          = "A simple daemon for learning stuff"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "learnerd"
readme.workspace     = true
repository.workspace = true
version              = "0.1.2"

[dependencies]
clap.workspace               = true
console.workspace            = true
dialoguer.workspace          = true
glob.workspace               = true
learner.workspace            = true
nix.workspace                = true
serde.workspace              = true
thiserror.workspace          = true
tokio.workspace              = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow                = { workspace = true }
assert_cmd.workspace  = true
predicates.workspace  = true
serial_test.workspace = true
tempfile.workspace    = true
